src/test/deca/context/valid/assign_bool_expr.deca
// Description:
//   Test d'une assignation avec une expression booléenne
//
// Resultats:
//    ok
// 

{
    int a = 3;
    boolean b = (a == 5)
}
