src/test/deca/context/invalid/binary_op_bool/lt_int_string.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : mauvais typage de l'inégalité
// 

{
    int a;
    boolean b;
    b = "toto" < a;
}
